--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.34.1",
+    "@react-three/fiber": "^8.8.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +12,14 @@
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.22.4",
     "react-hooks-global-state": "^2.0.0",
     "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.6",
     "swr": "^1.3.0",
+    "three": "^0.145.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
