--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.5.5",
     "@react-three/drei": "^9.34.1",
     "@react-three/fiber": "^8.8.9",
     "@testing-library/jest-dom": "^5.16.5",
