--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.22.4",
     "react-hooks-global-state": "^2.0.0",
+    "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
